# projekt-krypto-2025

./: .gitignore  .ninja_deps  .ninja_log  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  CmakeLists.txt  CppProperties.json  Makefile  README.md  bench_results.csv  build.ninja  cmake_install.cmake  crypto_tests[1]_include.cmake  generate_cmake.py  main.cpp
bench/: CMakeLists.txt  CTestTestfile.cmake  bench_aes_tdes.cpp  cmake_install.cmake  run_benchmarks.py
bench/adapters/: CMakeLists.txt  CTestTestfile.cmake  cipher_adapter.hpp  cmake_install.cmake  crypto_pp_adapter.cpp  crypto_pp_adapter.hpp  libsodium_adapter.cpp  libsodium_adapter.hpp  openssl_adapter.cpp  openssl_adapter.hpp
docs/: ARCHITECTURE.md  README.md
include/: algorithm.hpp  key.cpp  key.hpp  mylib.hpp  text.hpp
include/AES/: aes.hpp
include/TDES/: tdes.hpp
include/Tools/: enums.h
include/cipher/: cipher.hpp
include/cipher/AES/: aes.hpp
include/cipher/TDES/: tdes.hpp  tdes_b.hpp  tdes_bitslice_avx2.hpp  tdes_bitslice_avx512_skeleton.hpp
include/core/: Secretkey.hpp  cipherFactory.hpp  modeFactory.hpp
include/mode/: CBC.hpp  CTR.hpp  ECB.hpp  GCM.hpp  blockMode.hpp  mode.hpp  paddingMode.hpp
include/utils/: CounterNonce.hpp  DataConverter.hpp  Nonce.hpp  RNG.hpp  enums.h  enums.hpp
scripts/: anf_generator.py  anf_optimised_generator.py  generate_bitslice_avx512_tdes.py  generator.py  run_all.bat  run_all.sh  run_tests.sh
src/: AES_main.cpp  CMakeLists.txt  TDES_main.cpp  main.cpp
src/AES/: CMakeLists.txt  aes.cpp
src/TDES/: CMakeLists.txt  tdes.cpp  tdes_tables.cpp
src/cipher/AES/: CMakeLists.txt  CTestTestfile.cmake  aes.cpp  cmake_install.cmake
src/cipher/TDES/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  tdes.cpp  tdes_b.cpp  tdes_b_tables.cpp  tdes_bitslice_avx2.cpp  tdes_bitslice_avx512_skeleton.cpp  tdes_tables.cpp
src/classes/AES/: aes.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/core/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
src/mode/: CBC.cpp  CMakeLists.txt  CTR.cpp  CTestTestfile.cmake  ECB.cpp  GCM.cpp  blockMode.cpp  cmake_install.cmake
src/utils/: CMakeLists.txt  CTestTestfile.cmake  CounterNonce.cpp  Nonce.cpp  RNG.cpp  cipherFactory.cpp  cmake_install.cmake  modeFactory.cpp
tests/: CMakeLists.txt  KATHarness.hpp  TestReporter.hpp  main.cpp  test_aes.cpp  test_aes_kat.cpp  test_main.cpp  test_rng_nonce.cpp  test_tdes.cpp  test_tdes_kat.cpp  test_tdes_unit.cpp
tests/data/: aes_cbc_kat.csv  aes_ctr_kat.csv  aes_ecb_kat.csv  aes_gcm_kat.csv  tdes_cbc_kat.csv  tdes_ecb_kat.csv
tests/nist/aesavs/cbc/: CBC.csv
tests/nist/aesavs/cfb/: CFB1.csv  CFB8.csv
tests/nist/aesavs/ecb/: ECB.csv
tests/nist/aesavs/ofb/: OFB.csv
tests/nist/xts/: XTS.csv
